# detector_enfermedades_cultivo

./: .dockerignore  .gitignore  .gitlab-ci-debug.yml  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  PRESENTACION_PROYECTO.md  PROJECT_BOARD.md  README.md  docker-compose.yml  init_model.py  pyproject.toml  requirements.txt
configs/: train_vit.yaml  train_vit_gvj.yaml
docker_scripts/: run_inference.sh  run_streamlit.sh  run_training.sh
scripts/: export_onnx.py  export_torchscript.py  save_samples.py
src/plant_disease/: __init__.py
src/plant_disease/apps/: streamlit_app.py
src/plant_disease/data/: datasets.py
src/plant_disease/evaluation/: evaluate.py
src/plant_disease/inference/: predict.py
src/plant_disease/models/: vit.py
src/plant_disease/training/: train.py
tests/: test_collate.py  test_datasets.py  test_imports.py  test_inference.py  test_models_vit.py  test_predict_utils.py
